change URL to URI and improve VCSRepositoryURL handling